java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advHighlighting9/Underscore.java
class Undescore {
  void <error descr="As of Java 9, '_' is a keyword, and may not be used as an identifier">_</error>() { }
}